// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Task 12 R4 executed status envelopes snapshots real status envelopes across workflow state families 1`] = `
[
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "amend",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "reload_prompts",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "reload_references",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "abort",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
    ],
    "ok": true,
    "run_id": "r4-READY",
    "stage": "SOLVE",
    "state_revision": 0,
    "status": "READY",
  },
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [],
    "ok": true,
    "run_id": "r4-RUNNING",
    "stage": "SOLVE",
    "state_revision": 0,
    "status": "RUNNING",
  },
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "CHECKPOINT_PAUSED",
        "required_state_revision": 0,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "CHECKPOINT_PAUSED",
        "required_state_revision": 0,
      },
      {
        "action": "amend",
        "reason": "CHECKPOINT_PAUSED",
        "required_state_revision": 0,
      },
      {
        "action": "reload_prompts",
        "reason": "CHECKPOINT_PAUSED",
        "required_state_revision": 0,
      },
      {
        "action": "reload_references",
        "reason": "CHECKPOINT_PAUSED",
        "required_state_revision": 0,
      },
      {
        "action": "abort",
        "reason": "CHECKPOINT_PAUSED",
        "required_state_revision": 0,
      },
    ],
    "ok": true,
    "run_id": "r4-CHECKPOINT",
    "stage": "SOLVE",
    "state_revision": 0,
    "status": "AWAITING_HUMAN",
  },
  {
    "artifact": {
      "content": "artifact-1",
      "media_type": "text/markdown",
      "sha256": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "version": 1,
    },
    "latest_review": null,
    "next_actions": [
      {
        "action": "amend",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
      {
        "action": "reload_prompts",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
      {
        "action": "reload_references",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
      {
        "action": "abort",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
    ],
    "ok": true,
    "run_id": "r4-INCONCLUSIVE_UNSATISFIED",
    "stage": "REVIEW",
    "state_revision": 0,
    "status": "AWAITING_HUMAN",
  },
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [
      {
        "action": "amend",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
      {
        "action": "reload_prompts",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
      {
        "action": "reload_references",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
      {
        "action": "abort",
        "reason": "INPUT_CHANGE_REQUIRED",
        "required_state_revision": 0,
      },
    ],
    "ok": true,
    "run_id": "r4-PARSE_FAILURE_UNSATISFIED",
    "stage": "SOLVE",
    "state_revision": 0,
    "status": "AWAITING_HUMAN",
  },
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "RECONCILIATION_BLOCKED",
        "required_state_revision": 0,
      },
      {
        "action": "abort",
        "reason": "RECONCILIATION_BLOCKED",
        "required_state_revision": 0,
      },
    ],
    "ok": true,
    "run_id": "r4-BLOCKED",
    "stage": "SOLVE",
    "state_revision": 0,
    "status": "BLOCKED",
  },
  {
    "artifact": {
      "content": "artifact-1",
      "media_type": "text/markdown",
      "sha256": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "version": 1,
    },
    "latest_review": {
      "artifact_input_hash": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "checks_performed": [
        "proof",
      ],
      "findings": [],
      "prompt_hash": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "raw_report": "PASS",
      "raw_report_sha256": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "reference_hash": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "round": 1,
      "session_id": "review-1",
      "verdict": "PASS",
    },
    "next_actions": [],
    "ok": true,
    "run_id": "r4-PASSED",
    "stage": null,
    "state_revision": 0,
    "status": "PASSED",
  },
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [],
    "ok": true,
    "run_id": "r4-EXHAUSTED",
    "stage": null,
    "state_revision": 0,
    "status": "EXHAUSTED",
  },
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [],
    "ok": true,
    "run_id": "r4-ABORTED",
    "stage": null,
    "state_revision": 0,
    "status": "ABORTED",
  },
]
`;

exports[`Task 12 final R4 execution coverage snapshots actual envelopes from all six tool factories 1`] = `
[
  {
    "artifact": null,
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "amend",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "reload_prompts",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "reload_references",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
      {
        "action": "abort",
        "reason": "READY_TO_RUN",
        "required_state_revision": 0,
      },
    ],
    "ok": true,
    "run_id": "six",
    "stage": "SOLVE",
    "state_revision": 0,
    "status": "READY",
  },
  {
    "artifact": {
      "content": "# artifact\\n",
      "media_type": "text/markdown",
      "sha256": "574fa87b532b8a4904d8bd937edc9058f3597262d22d12b06b6ef889bbcb84e7",
      "version": 1,
    },
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "amend",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "reload_prompts",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "reload_references",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "abort",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
    ],
    "ok": true,
    "run_id": "six",
    "stage": "REVIEW",
    "state_revision": 6,
    "status": "READY",
  },
  {
    "artifact": {
      "content": "# artifact\\n",
      "media_type": "text/markdown",
      "sha256": "574fa87b532b8a4904d8bd937edc9058f3597262d22d12b06b6ef889bbcb84e7",
      "version": 1,
    },
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "amend",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "reload_prompts",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "reload_references",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
      {
        "action": "abort",
        "reason": "READY_TO_RUN",
        "required_state_revision": 6,
      },
    ],
    "ok": true,
    "run_id": "six",
    "stage": "REVIEW",
    "state_revision": 6,
    "status": "READY",
  },
  {
    "artifact": {
      "content": "# artifact\\n",
      "media_type": "text/markdown",
      "sha256": "574fa87b532b8a4904d8bd937edc9058f3597262d22d12b06b6ef889bbcb84e7",
      "version": 1,
    },
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "READY_TO_RUN",
        "required_state_revision": 7,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "READY_TO_RUN",
        "required_state_revision": 7,
      },
      {
        "action": "amend",
        "reason": "READY_TO_RUN",
        "required_state_revision": 7,
      },
      {
        "action": "reload_prompts",
        "reason": "READY_TO_RUN",
        "required_state_revision": 7,
      },
      {
        "action": "reload_references",
        "reason": "READY_TO_RUN",
        "required_state_revision": 7,
      },
      {
        "action": "abort",
        "reason": "READY_TO_RUN",
        "required_state_revision": 7,
      },
    ],
    "ok": true,
    "run_id": "six",
    "stage": "REVIEW",
    "state_revision": 7,
    "status": "READY",
  },
  {
    "artifact": {
      "content": "# artifact\\n",
      "media_type": "text/markdown",
      "sha256": "574fa87b532b8a4904d8bd937edc9058f3597262d22d12b06b6ef889bbcb84e7",
      "version": 1,
    },
    "latest_review": null,
    "next_actions": [
      {
        "action": "step_one_stage",
        "reason": "READY_TO_RUN",
        "required_state_revision": 8,
      },
      {
        "action": "step_to_checkpoint",
        "reason": "READY_TO_RUN",
        "required_state_revision": 8,
      },
      {
        "action": "amend",
        "reason": "READY_TO_RUN",
        "required_state_revision": 8,
      },
      {
        "action": "reload_prompts",
        "reason": "READY_TO_RUN",
        "required_state_revision": 8,
      },
      {
        "action": "reload_references",
        "reason": "READY_TO_RUN",
        "required_state_revision": 8,
      },
      {
        "action": "abort",
        "reason": "READY_TO_RUN",
        "required_state_revision": 8,
      },
    ],
    "ok": true,
    "run_id": "six",
    "stage": "REVIEW",
    "state_revision": 8,
    "status": "READY",
  },
  {
    "artifact": {
      "content": "# artifact\\n",
      "media_type": "text/markdown",
      "sha256": "574fa87b532b8a4904d8bd937edc9058f3597262d22d12b06b6ef889bbcb84e7",
      "version": 1,
    },
    "latest_review": null,
    "next_actions": [],
    "ok": true,
    "run_id": "six",
    "stage": null,
    "state_revision": 9,
    "status": "ABORTED",
  },
]
`;
